--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "root",
+  "name": "banner-man-builder",
   "private": true,
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -11,7 +11,6 @@
     "commander": "^3.0.2",
     "cross-env": "^5.2.0",
     "css-loader": "^3.1.0",
-    "inquirer": "^7.0.0",
     "node-sass": "^4.12.0",
     "rd": "^2.0.1",
     "rollup": "^1.17.0",
@@ -32,5 +31,9 @@
     "vue": "^2.6.10",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "bin": {
+    "bmbuilder": "generate.js"
+  },
+  "dependencies": {}
 }
