页面 5d4abeba65b2987cbf0f86dd 构建

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "banner-man-builder",
   "private": true,
+  "version": "0.0.1",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
