--- a/project/5d4abeba65b2987cbf0f86dd/package.json
+++ b/project/5d4abeba65b2987cbf0f86dd/package.json
@@ -1,1 +1,15 @@
-{"name":"5d4abeba65b2987cbf0f86dd","private":true,"version":"0.0.0","description":"Page Created by BannerMan","author":"000000000000000000000000","dependencies":{"@banner-man/render":"0.0.8","@banner-man/common":"0.0.3","@banner-man/widget-tabs":"0.0.6","@banner-man/widget-container":"0.0.6","@banner-man/widget-search":"0.0.6","@banner-man/widget-button":"0.0.9"}}
+{
+  "name": "5d4abeba65b2987cbf0f86dd",
+  "private": true,
+  "version": "0.0.1",
+  "description": "Page Created by BannerMan",
+  "author": "000000000000000000000000",
+  "dependencies": {
+    "@banner-man/render": "0.0.8",
+    "@banner-man/common": "0.0.3",
+    "@banner-man/widget-tabs": "0.0.6",
+    "@banner-man/widget-container": "0.0.6",
+    "@banner-man/widget-search": "0.0.6",
+    "@banner-man/widget-button": "0.0.9"
+  }
+}
