--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-vue": "^2.0.2",
     "chalk": "^2.4.2",
     "commander": "^3.0.2",
+    "compressing": "^1.4.0",
     "cross-env": "^5.2.0",
     "css-loader": "^3.1.0",
     "node-sass": "^4.12.0",
