--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "banner-man-builder",
   "private": true,
   "version": "0.0.1",
+  "scripts": {
+    "server": "node server/index.js"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
